src/objects/Expert_Review_Panel__c.object
<CustomObject>
    <fields>
        <fullName>NOFA_Group_Name__c</fullName>
        <description>Derives NOFA Group Name of that particular External review panel</description>
        <formula>Panel__r.NOFA_Group_Name1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NOFO Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Panel1__c</fullName>
        <formula>Panel__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Panel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Panel_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Its a lookup to panel members object to select a panel member</description>
        <label>Panel Member</label>
        <referenceTo>Panel_Member__c</referenceTo>
        <relationshipName>Peer_Review_Panel</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Panel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Panel</label>
        <referenceTo>Paneling__c</referenceTo>
        <relationshipName>Expert_Review_Panel</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Panel_member_name__c</fullName>
        <formula>Panel_Member__r.Expert_Reviewer__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Panel member name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <formula>Panel_Member__r.Profile__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to contact object to find a reviewer</description>
        <label>External Reviewer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Expert_Review_Panel</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Panel Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternate Panel Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternate Reviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Reviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Experienced Reviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Targeted Expertise Reviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluation Reviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Editor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Control Reviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inter-Rater Reliability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Review Quality Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff Reviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff Liaison</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Staff_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Expert_Review_Panel1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage_Type__c</fullName>
        <description>Derives stage type from panel object</description>
        <formula>TEXT( Panel__r.Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>Derives the Stage Id from stages object</description>
        <formula>Panel__r.Stage_Number__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>States the status of the External review panel from a set of values</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <label>Test</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Test__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Test</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Expert_Review_Panel</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>External Review Panel</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>NOFA_Group_Name__c</columns>
        <columns>Reviewer__c</columns>
        <columns>Staff_Reviewer__c</columns>
        <columns>Stage__c</columns>
        <columns>Stage_Type__c</columns>
        <columns>Panel__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Expert_Review_Panel_with_NOFO_Name</fullName>
        <columns>NAME</columns>
        <columns>NOFA_Group_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Expert_Review_Panel</fullName>
        <columns>NAME</columns>
        <columns>NOFA_Group_Name__c</columns>
        <columns>Panel__c</columns>
        <columns>Stage__c</columns>
        <columns>Stage_Type__c</columns>
        <columns>Panel_Member__c</columns>
        <filterScope>Mine</filterScope>
        <label>My External Review Panel</label>
    </listViews>
    <nameField>
        <displayFormat>ER-{000000}</displayFormat>
        <label>Peer Review Panel Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External Review Panel</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>